--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@
 			 
 			.kotak_login{
 				width: 350px;
-				background: white;
+				background: rgba(0,0,0, 0.4);
 				margin: 120px auto;
 				padding: 30px 20px;
 			}
