--- a/css/style.css
+++ b/css/style.css
@@ -981,6 +981,14 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #ccc;
 }
 
+
+.tulisan_login{
+	text-align: center;
+	text-transform: uppercase;
+	font-family:Times New Norman;
+	color:white;
+}
+
 .kotak_login{
 	width: 360px;
 	background: rgba(0,0,0, 0.4);
