--- a/css/style.css
+++ b/css/style.css
@@ -995,6 +995,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 	font-family:Times New Norman;
 	color:white;
 	font-size:10pt;
+}
 
 .kotak_login{
 	width: 360px;
